# vpn_bot

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  DOCKER.md  Dockerfile  Dockerfile.dev  Makefile  README.md  STRUCTURE.md  admin_panel.py  alembic.ini  bot.py  config.py  cryptobot_payment.py  database.py  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  docker-entrypoint.sh  main.py  marzban_api.py  models.py  notifications.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: deploy.yml
middleware/: __init__.py  logging.py
migrations/: __init__.py  env.py
scripts/: __init__.py  alembic_manager.py  create_admin.py  db_backup.py  migrate.py  run_migration.py
src/: __init__.py  bot.py
src/core/: __init__.py  config.py  database.py  database_manager.py
src/enums/: __init__.py  payment.py  subscription.py  user.py
src/handlers/: __init__.py  admin.py  payment_integration.py  payment_stars.py  user.py  user_updated.py
src/keyboards/: payment.py
src/models/: __init__.py  admin.py  notification.py  payment.py  subscription.py  user.py
src/services/: __init__.py  marzban.py  notification.py  payment.py  payment_stars.py
utils/: __init__.py  decorators.py  format_error.py  helpers.py  logger.py  validators.py
